@@ -105,8 +105,9 @@ public:
         Constructor for continuing a campaign at the specified mission
         \param  prevGameInitInfoClass   the init settings of the previous mission in the campaign
         \param  nextMission             the number of the mission to continue the campaign
+        \param  alreadyPlayedRegions    a bit set describing which regions were already played (used to forbid playing these again)
     */
-    GameInitSettings(const GameInitSettings& prevGameInitInfoClass, int nextMission);
+    GameInitSettings(const GameInitSettings& prevGameInitInfoClass, int nextMission, Uint32 alreadyPlayedRegions);
 
     /**
         Constructor for specifying the start of a skirmish mission in the campaign
@@ -164,6 +165,7 @@ public:
     inline GameType getGameType() const { return gameType; };
     inline HOUSETYPE getHouseID() const { return houseID; };
     inline int getMission() const { return mission; };
+    inline Uint32 getAlreadyPlayedRegions() const { return alreadyPlayedRegions; };
     inline const std::string& getFilename() const { return filename; };
     inline const std::string& getFiledata() const { return filedata; };
     inline const std::string& getServername() const { return servername; };
@@ -201,6 +203,7 @@ private:
 
     HOUSETYPE       houseID;
     int             mission;
+    Uint32          alreadyPlayedRegions;
 
     std::string     filename;
     std::string     filedata;
